# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

component("client") {
  output_name = "cc_client"
  sources = [
    "client_export.h",
    "compositor_channel_host.cc",
    "compositor_channel_host.h",
    "compositor_proxy.cc",
    "compositor_proxy.h",
  ]

  defines = [ "CC_CLIENT_IMPLEMENTATION=1" ]

  public_deps = [
    "//cc",
  ]
  deps = [
    "//base",
    "//cc/ipc:interfaces",
    "//gpu/ipc/client",
  ]

  if (is_android && !is_debug) {
    configs -= [ "//build/config/compiler:default_optimization" ]
    configs += [ "//build/config/compiler:optimize_max" ]
  }
}
