# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("host") {
  sources = [
    "display_compositor_connection.cc",
    "display_compositor_connection.h",
    "display_compostior_connection_factory.h",
    "display_compositor_host.h",
    "display_compositor_host.cc",
  ]

  public_deps = [
    "//cc",
    "//cc/ipc:interfaces",
    "//mojo/public/cpp/bindings",
  ]
}
