# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

component("service") {
  output_name = "cc_service"
  sources = [
    "service.cc",
    "service.h",
    "service_export.h",
    "service_factory.cc",
    "service_factory.h",
  ]

  defines = [ "CC_SERVICE_IMPLEMENTATION=1" ]

  public_deps = [
    "//cc",
  ]
  deps = [
    "//base",
  ]

  if (is_android && !is_debug) {
    configs -= [ "//build/config/compiler:default_optimization" ]
    configs += [ "//build/config/compiler:optimize_max" ]
  }
}
