# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

component("service") {
  output_name = "cc_service"
  sources = [
    "compositor_channel.cc",
    "compositor_channel.h",
    "delegating_output_surface.cc",
    "delegating_output_surface.h",
    "display_output_surface.cc",
    "display_output_surface.h",
    "service.cc",
    "service.h",
    "service_context_provider.cc",
    "service_context_provider.h",
    "service_export.h",
    "service_factory.cc",
    "service_factory.h",
  ]

  defines = [ "CC_SERVICE_IMPLEMENTATION=1" ]

  public_deps = [
    "//cc",
  ]
  deps = [
    "//base",
    "//cc:transport",
    "//cc/ipc:interfaces",
    "//cc/surfaces",
    "//gpu/command_buffer/client:gl_in_process_context",
    "//gpu/command_buffer/client:gles2_c_lib",
    "//gpu/command_buffer/client:gles2_implementation",
    "//gpu/command_buffer/client:gles2_interface",
    "//gpu/ipc/service",
    "//gpu/skia_bindings",
  ]

  if (is_android && !is_debug) {
    configs -= [ "//build/config/compiler:default_optimization" ]
    configs += [ "//build/config/compiler:optimize_max" ]
  }
}
